syntax = "proto3";

import "google/protobuf/timestamp.proto";

service CalendarService {
    rpc CreateEvent(CreateEventRequest) returns (CreateEventResponse) {}
    rpc UpdateEvent(UpdateEventRequest) returns (UpdateEventResponse) {}
    rpc GetEvent(GetEventRequest) returns (GetEventResponse) {}
    rpc DeleteEvent(DeleteEventRequest) returns (DeleteEventResponse) {}
}

message Event {
    string id = 1;
    string title = 2;
    google.protobuf.Timestamp start_time = 5;
    google.protobuf.Timestamp end_time = 6;
}

message CreateEventRequest {
    string title = 1;
    google.protobuf.Timestamp start_time = 3;
    google.protobuf.Timestamp end_time = 4;
}

message CreateEventResponse {
    Event event = 1;
}

message UpdateEventRequest {
    string id = 1;
    string title = 2;
    string text = 3;
    google.protobuf.Timestamp start_time = 4;
    google.protobuf.Timestamp end_time = 5;
}

message UpdateEventResponse {
    Event event = 1;
}

message DeleteEventRequest {
    string id = 1;
}

message DeleteEventResponse {}

message GetEventRequest {
    string id = 1;
}

message GetEventResponse {
    Event event = 1;
}